--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "homepage": "https://github.com/Glascode/e-low#readme",
   "dependencies": {
-    "nuxt": "^2.11.0"
+    "nuxt": "^2.11.0",
+    "vue-trend-chart": "^0.15.1"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^1.3.3"
