--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-trend-chart": "^0.15.1"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^1.3.3"
+    "@nuxtjs/tailwindcss": "^1.3.3",
+    "tailwindcss-dark-mode": "^1.1.2"
   }
 }
